<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_bluefilter_switch"
        android:summary="@string/pref_bluefilter_summary"
        android:title="@string/pref_bluefilter_title" />

    <EditTextPreference
        android:defaultValue="08:00"
        android:key="pref_bluefilter_disable"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/bluefilter_disable_h" />

    <EditTextPreference
        android:defaultValue="20:00"
        android:key="pref_bluefilter_enable"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/bluefilter_enable_h" />

    <PreferenceCategory android:title="@string/dbg_adv">

        <EditTextPreference
            android:defaultValue="20FFFF00"
            android:key="pref_bluefilter_color"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters"
            android:title="@string/bluefilter_color" />



    </PreferenceCategory>



</PreferenceScreen>
