<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_volctrl_switch"
        android:summary="@string/pref_volctrl_summary"
        android:title="@string/pref_volctrl_title" />


    <PreferenceCategory android:title="@string/dbg_adv">

        <EditTextPreference
            android:defaultValue="250"
            android:key="pref_volctrl_nb_samples"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/nb_samples" />

        <EditTextPreference
            android:defaultValue="20"
            android:key="pref_volctrl_sample_time"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/samples_time" />


    </PreferenceCategory>


</PreferenceScreen>
